tests/miz/fail/parser/fail_parser_missing_semicolon_001.miz
theorem T: thesis
lemma L: thesis;
